--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Astro Runtime includes the following pre-installed providers packages: https://www.astronomer.io/docs/astro/runtime-image-architecture#provider-packages
-newsapi-python
-beautifulsoup4
-google-generativeai
-psycopg2-binary
-python-dotenv
-lxml
+newsapi-python==0.2.7
+beautifulsoup4==4.12.3
+google-generativeai==0.7.2
+psycopg2-binary==2.9.9
+python-dotenv==1.0.1
+lxml==5.3.0
