--- a/.github/workflows/etl_daily.yaml
+++ b/.github/workflows/etl_daily.yaml
@@ -2,7 +2,7 @@ name: Run ETL Daily
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Every day at 12 AM UTC
+    - cron: '6 30 * * *'  # Every day at 12 AM IST
   workflow_dispatch:      # (Optional) Allows manual trigger from GitHub UI
 
 jobs:
